# rstool

./: README.md
rstool/: index.html  package.json  rsbuild.config.ts
rstool/src/: App.tsx  main.tsx
rstool/src-tauri/: Cargo.toml  tauri.conf.json
rstool/src-tauri/capabilities/: default.json
rstool/src-tauri/src/: lib.rs  main.rs  pwmanager.rs
rstool/src-tauri/src/pwmanager/: cryptography.rs  error.rs  logs.rs
rstool/src/components/: CurrentTime.tsx
rstool/src/pages/: Home.tsx  Password.tsx  Settings.tsx
rstool/src/pages/pwmanager/: Login.tsx  backend.tsx  login.less  utils.tsx
rstool/src/utils/: fs.ts  path.ts  shell.ts
